WebUi project was set up