@@ -1,6 +1,8 @@
 plugins {
     id 'java'
+    id "io.freefair.lombok" version "5.3.0"
 }
+apply plugin: 'maven'
 
 group 'org.example'
 version '1.0-SNAPSHOT'
@@ -10,14 +12,27 @@ repositories {
 }
 
 dependencies {
-    testImplementation group: 'io.rest-assured', name: 'rest-assured', version: '4.3.3'
-
     testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVer"
+    testImplementation group: 'com.codeborne', name: 'selenide', version: '5.18.0'
+    testImplementation group: 'com.saucelabs', name: 'saucerest', version: '1.0.47'
+
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 }
 
 test {
+    systemProperties System.getProperties()
     useJUnitPlatform() {
 
+    }
+}
+
+compileTestJava {
+    doFirst {
+        options.compilerArgs = ["--module-path", classpath.asPath,
+                "--add-modules", "org.junit.jupiter.api",
+                "--add-modules", "com.codeborne.selenide",
+                "--add-modules", "lombok"
+        ]
+        classpath = files()
     }
 }
